# ToolBox

./: .kali  typescript
Scripts/: test_scanme.sh
Scripts/Networking/net-check_rs/: Cargo.toml  README.md  build.sh  net_defense_monitor.py  network_checks.py  opsec.md  requirements.txt
Scripts/Networking/net-check_rs/src/: host_audit.rs  main.rs  network_checks.rs  opsec_tests.rs  packet_capture.rs
Scripts/src/: main.rs  models.rs  scanner.rs  utils.rs
