[package]
name = "vpn_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0" # For network interface inspection
pcap = "1.1.0" # For packet capture
nix = { version = "0.27.1", features = ["net", "fs"] } # Removed user/utmpx features as login check is disabled
log = "0.4" # Logging facade
env_logger = "0.11" # Logging implementation
regex = "1" # For parsing specific formats like resolv.conf
ipnetwork = "0.20" # For IP address and subnet parsing
ctrlc = "3.4" # For graceful shutdown handling
reqwest = { version = "0.11", features = ["blocking", "json"] } # For optional external IP check
serde_json = "1.0" # For parsing external IP check results
utmp-rs = "0.4" # Updated to latest version for consistent API
which = "4" # Added for finding firewall commands (nft, iptables)

# Add other potential dependencies as needed
# e.g., dns-lookup or trust-dns-resolver for more robust DNS checks 